--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css" />
-    <style>
-      * {
-        /* border: 2px solid; */
-      }
-    </style>
-    <!-- <script>
+    <script>
       tailwind.config = {
+        darkMode: "class",
         theme: {
           extend: {
-            spacing: {
-              13: "3.25rem",
-            },
             colors: {
-              ach: "#bada55",
+              clifford: "#da373d",
             },
           },
         },
       };
-    </script> -->
+    </script>
+
     <title>Tailwind CSS</title>
+    <style type="text/tailwindcss">
+      #toggle:checked ~ label div.toggle-circle {
+        @apply translate-x-3;
+      }
+    </style>
   </head>
-  <body>
+  <body class="dark:bg-slate-800 dark:text-slate-200">
     <!-- Padding dan Margin -->
     <section>
       <div class="flex m-auto justify-center items-center">
@@ -190,15 +190,29 @@
       </div>
     </section>
 
-    <hr class="my-2" />
     <!-- Psuedo-class dan dark-mode -->
 
     <section class="py-20">
-      <!-- ketika normal bg-sky-500, ketika di hover berubah menjadi 700 dan ketika di clik menjadi 900, dan focus ketika button sudah di click -->
+      <!-- Membuat togle untuk dark mode -->
 
-      <div class="flex justify-center border border-3 border-y-blue-950">
+      <div class="flex justify-center mb-10">
+        <span class="text-sm mr-2">Ligth</span>
+        <label for="toggle">
+          <div
+            class="w-10 h-5 bg-sky-400 rounded-full flex items-center pl-0.5 cursor-pointer"
+          >
+            <div class="w-4 h-4 bg-slate-100 rounded-full toggle-circle"></div>
+          </div>
+        </label>
+        <input type="checkbox" id="toggle" class="hidden" />
+
+        <span class="text-sm ml-2">Dark</span>
+      </div>
+
+      <!-- ketika normal bg-sky-500, ketika di hover berubah menjadi 700 dan ketika di clik menjadi 900, dan focus ketika button sudah di click -->
+      <div class="flex justify-center">
         <button
-          class="px-6 py-2 bg-sky-500 rounded-lg text-white hover:bg-sky-700 active:bg-sky-900 focus:ring-2 focus:ring-sky-700"
+          class="px-6 py-2 bg-sky-500 rounded-lg text-white hover:bg-sky-700 active:bg-sky-900 focus:ring-2 focus:ring-sky-700 dark:bg-slate-600 dark:text-slate-200"
         >
           Simpan
         </button>
@@ -244,5 +258,16 @@
         </form>
       </div>
     </section>
+
+    <script>
+      const checkbox = document.querySelector("#toggle");
+      const html = document.querySelector("html");
+
+      checkbox.addEventListener("click", function () {
+        checkbox.checked
+          ? html.classList.add("dark")
+          : html.classList.remove("dark");
+      });
+    </script>
   </body>
 </html>
